# json-to-builtin-type

./: CMakeCache.txt  CTestTestfile.cmake  Makefile  README.md  app  cmake_install.cmake
temp/: CMakeLists.txt  main.cpp
temp/tests/: custom_test.cpp
